# worlds-history-sim-rs

./: Cargo.toml  build_web.sh  evolution-simulator.html
civ-sim/: Cargo.toml  serve.py  standalone.html
civ-sim/src/: civilization.rs  culture.rs  economy.rs  history.rs  lib.rs  military.rs  names.rs  politics.rs  religion.rs  simulation.rs  technology.rs  ui.rs  utils.rs  world.rs
civ-sim/www/: index.html  index.js  style.css
simulation/: Cargo.toml
simulation/src/: biome.rs  creature.rs  ecosystem.rs  genetics.rs  lib.rs  math_util.rs  perlin.rs  simulation.rs  species.rs  wasm_api.rs  world.rs
web/: app.js  index.html  style.css
